docs: :memo: add documentation for show opening
